# brazilian-football-jerseys

./: .gitignore  Makefile  README.md  pyproject.toml
app/analytics/: basic_data_analysis.ipynb  data-analysis.ipynb  main.py  minimun_wage_analysis.ipynb
app/analytics/locales/en/LC_MESSAGES/: messages.po
app/analytics/locales/pt/LC_MESSAGES/: messages.po
app/data/: add_columns_raw_data.py
app/minimum_wage/: README.md  minimum_wage.py
app/minimun_wage/: minimum_wage.py  salario_minimo.py  salario_minimo_historico.csv
data/processed/: README.md  brazil-teams-jersey-price-processed.csv  minimum_wage_historical.csv
data/raw/: IPCA.csv  README.md  brazil-teams-jersey-price.csv
raw/: brazil-teams-jersey-price.csv
