[project]
name = "brazil-teams-jersey-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.1.3",
    "jupyter>=1.1.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
]
